logs/dag_id=Credit_score_pipeline_v04/run_id=manual__2024-08-06T140559.245755+0000/task_id=load_data/attempt=6.log
[2024-08-06T14:21:42.288+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Credit_score_pipeline_v04.load_data manual__2024-08-06T14:05:59.245755+00:00 [queued]>
[2024-08-06T14:21:42.299+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Credit_score_pipeline_v04.load_data manual__2024-08-06T14:05:59.245755+00:00 [queued]>
[2024-08-06T14:21:42.300+0000] {taskinstance.py:2193} INFO - Starting attempt 6 of 9
[2024-08-06T14:21:42.547+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): load_data> on 2024-08-06 14:05:59.245755+00:00
[2024-08-06T14:21:42.566+0000] {standard_task_runner.py:60} INFO - Started process 637 to run task
[2024-08-06T14:21:42.570+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Credit_score_pipeline_v04', 'load_data', 'manual__2024-08-06T14:05:59.245755+00:00', '--job-id', '195', '--raw', '--subdir', 'DAGS_FOLDER/credit_score.py', '--cfg-path', '/tmp/tmpqx30vtph']
[2024-08-06T14:21:42.578+0000] {standard_task_runner.py:88} INFO - Job 195: Subtask load_data
[2024-08-06T14:21:42.810+0000] {task_command.py:423} INFO - Running <TaskInstance: Credit_score_pipeline_v04.load_data manual__2024-08-06T14:05:59.245755+00:00 [running]> on host 43471a75e062
[2024-08-06T14:21:44.551+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Credit_score_pipeline_v04' AIRFLOW_CTX_TASK_ID='load_data' AIRFLOW_CTX_EXECUTION_DATE='2024-08-06T14:05:59.245755+00:00' AIRFLOW_CTX_TRY_NUMBER='6' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-06T14:05:59.245755+00:00'
[2024-08-06T14:21:44.553+0000] {sql.py:276} INFO - Executing: 
        LOAD DATA LOCAL INFILE '/opt/***/dags/clean_train.csv'
        INTO TABLE credit
        FIELDS TERMINATED BY ','
        LINES TERMINATED BY '
'
        IGNORE 1 ROWS;
        
[2024-08-06T14:21:44.565+0000] {base.py:83} INFO - Using connection ID '***ql' for task execution.
[2024-08-06T14:21:44.580+0000] {base.py:83} INFO - Using connection ID '***ql' for task execution.
[2024-08-06T14:21:44.622+0000] {sql.py:457} INFO - Running statement: 
        LOAD DATA LOCAL INFILE '/opt/***/dags/clean_train.csv'
        INTO TABLE credit
        FIELDS TERMINATED BY ','
        LINES TERMINATED BY '
'
        IGNORE 1 ROWS;
        , parameters: None
[2024-08-06T14:21:44.629+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "DATA"
LINE 2:         LOAD DATA LOCAL INFILE '/opt/***/dags/clean_trai...
                     ^

[2024-08-06T14:21:44.639+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=Credit_score_pipeline_v04, task_id=load_data, execution_date=20240806T140559, start_date=20240806T142142, end_date=20240806T142144
[2024-08-06T14:21:44.656+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 195 for task load_data (syntax error at or near "DATA"
LINE 2:         LOAD DATA LOCAL INFILE '/opt/***/dags/clean_trai...
                     ^
; 637)
[2024-08-06T14:21:44.818+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-08-06T14:21:44.844+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
